<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LogicaActivity">
    <TextView
            android:text="@string/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="176dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="176dp" android:textStyle="bold" android:textSize="24sp"/>
    <TextView
            android:text="@string/table_title_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitleLeft" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/tvTitleMiddle"
            android:layout_marginEnd="16dp" app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            android:layout_marginTop="49dp" android:textStyle="bold"/>
    <TextView
            android:text="@string/table_title_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitleMiddle" android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/tvTitleLeft" app:layout_constraintEnd_toStartOf="@+id/tvTitleRight"
            android:layout_marginEnd="16dp" android:layout_marginTop="49dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" android:textStyle="bold"/>
    <TextView
            android:text="@string/table_title_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitleRight" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/tvTitleMiddle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" android:layout_marginTop="49dp"
            android:textStyle="bold" android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/true_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLeft1" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleLeft" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="57dp" app:layout_constraintEnd_toStartOf="@+id/tvLeft3"
            android:layout_marginEnd="46dp" android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/tvRight1" app:layout_constraintVertical_bias="0.6"/>
    <TextView
            android:text="@string/true_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRight1" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/tvLeft1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="57dp" app:layout_constraintEnd_toStartOf="@+id/tvRight3"
            android:layout_marginEnd="46dp" android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/tvLeft2"/>
    <TextView
            android:text="@string/false_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLeft2" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/tvRight1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="57dp" app:layout_constraintEnd_toStartOf="@+id/tvLeft4"
            android:layout_marginEnd="46dp" android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/tvRight2"/>
    <TextView
            android:text="@string/false_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRight2" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/tvLeft2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="57dp" app:layout_constraintEnd_toStartOf="@+id/tvRight4"
            android:layout_marginEnd="46dp" android:layout_marginBottom="345dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/true_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLeft3" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleMiddle" android:layout_marginStart="46dp"
            app:layout_constraintStart_toEndOf="@+id/tvLeft1"
            app:layout_constraintEnd_toStartOf="@+id/etValue1" android:layout_marginEnd="50dp"
            android:layout_marginBottom="40dp" app:layout_constraintBottom_toTopOf="@+id/tvRight3"/>
    <TextView
            android:text="@string/false_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRight3" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/tvLeft3" android:layout_marginStart="46dp"
            app:layout_constraintStart_toEndOf="@+id/tvRight1" app:layout_constraintEnd_toStartOf="@+id/etValue2"
            android:layout_marginEnd="50dp" android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/tvLeft4"/>
    <TextView
            android:text="@string/true_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLeft4" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/tvRight3" android:layout_marginStart="46dp"
            app:layout_constraintStart_toEndOf="@+id/tvLeft2" app:layout_constraintEnd_toStartOf="@+id/etValue3"
            android:layout_marginEnd="50dp" android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/tvRight4"/>
    <TextView
            android:text="@string/false_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRight4" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/tvLeft4" android:layout_marginStart="46dp"
            app:layout_constraintStart_toEndOf="@+id/tvRight2"
            app:layout_constraintEnd_toStartOf="@+id/etValue4" android:layout_marginEnd="50dp"
            android:layout_marginBottom="345dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="2"
            android:id="@+id/etValue1" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleRight" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="80dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/etValue2"
            app:layout_constraintVertical_bias="0.100000024"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="2"
            android:id="@+id/etValue2" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/etValue1" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="80dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/etValue3"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="2"
            android:id="@+id/etValue3" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/etValue2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="80dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/etValue4"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="2"
            android:id="@+id/etValue4" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/etValue3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="80dp" android:layout_marginBottom="320dp"
            app:layout_constraintBottom_toBottomOf="parent"
    />
    <Button
            android:text="@string/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSubmit"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="90dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="161dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="162dp"/>
    <TextView
            android:text="@string/high_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvHighScore" android:layout_marginBottom="31dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSubmit" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="176dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="176dp" android:layout_marginTop="136dp"
            app:layout_constraintTop_toBottomOf="@+id/tvRight4"/>
</androidx.constraintlayout.widget.ConstraintLayout>